# Manus

./: .env.example  .gitignore  CLAUDE.md  INTERFACE_CONTRACT.md  PLAN.md  README.md  main.py  pyproject.toml  test_capture.py
docs/: GestureOS_ProjectBrief.md  INTERFACE_CONTRACT.md  PHASE5_IMPLEMENTATION.md  PLAN.md
docs/lab/: FEATURE_synthetic_augmentation.md
docs/study/: 01_gesture_sequence_classification.md  02_similar_gesture_discrimination.md
scripts/: bootstrap_augmented_dataset.py  capture.py  data_collector.py  train.py
src/adapters/: base_adapter.py  mqtt_adapter.py  pc_adapter.py  websocket_adapter.py
src/api/: connectionMenager.py  connection_manager.py  server.py
src/api/models/: gesture.py
src/api/routes/: config.py  dataset.py  sequences.py  training.py
src/config/: gesture_actions.json  sequences.json  thresholds.json
src/core/: __init__.py  base_adapter.py  classifier.py  event_bus.py  gesture_event.py  normalizer.py  sequence_event.py  sequence_recogniser.py  two_hand_classifier.py
src/data/: extract_landmarks.py  gestures.csv
src/data/gestures/CANCEL/: 1775575412585.npy  1775575412997.npy  1775575413308.npy  1775575413479.npy  1775575413694.npy  1775575413930.npy  1775575414164.npy  1775575414367.npy  1775575414539.npy  1775575414742.npy  1775575414954.npy  1775575415140.npy  1775575415362.npy  (+107 more)
src/frontend/: dashboard.html  index.html  studio.html
src/frontend/shared/: nav.js  styles.css
src/lab/: augment.py  augment_gesture.py  gesture_template.py
src/training/: trainer.py
tests/: test_api.py  test_two_hand_augment.py
(+966 files in other folders)
