[project]
name = "manus"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mediapipe==0.10.14",
    "opencv-python>=4.9",
    "scikit-learn>=1.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pyautogui>=0.9.54",
    "pynput>=1.7",
    "paho-mqtt>=2.0",
    "pydantic>=2.12.5",
]

[tool.uv]
package = false
